<resources>
    <string name="app_name">SimpleChat</string>
    <string name="join_channel">Join Channel</string>
    <string name="create_channel">Create Channel</string>
    <string name="create_conversation">Create Conversation</string>
    <string name="edit_text_message">Edit text message</string>
    <string name="edit_custom_message">Edit custom message</string>
    <string name="filter_channel">Filter Channel</string>
    <string name="leave_channel">Leave Channel</string>
    <string name="member">Member</string>
    <string name="notification_for_current_channel">Notification Settings</string>
    <string name="revert_layout">Revert Layout</string>
    <string name="set_tags">Set Tag(s)</string>
    <string name="stack_from_end">Stack From End</string>
    <string name="toolbar_channel_list">Channels</string>
    <string name="toolbar_parent_message_list">Chat</string>
    <string name="toolbar_child_message_list">Reply</string>
    <string name="total_unread_d">Total unread: %d</string>
    <string name="with_tag">With Tag(s)</string>
    <string name="without_tag">Without Tag(s)</string>

    <string name="change_display_name">Change DisplayName</string>
    <string name="change_metadata">Change Metadata</string>
    <string name="change_api_key">Change API Key</string>
    <string name="notification_for_current_user">Notification Settings</string>
    <string name="register">Register</string>
    <string name="register_push">Register Push</string>
    <string name="request_write_settings_permissions">Request Write Settings Permission</string>
    <string name="unregister">Un-Register</string>
    <string name="unregister_push">Un-register Push</string>
    <string name="unregister_push_for_all">Un-register Push for All Users</string>


    <string name="temporarily_chat">Chat</string>
    <string name="temporarily_members">%s Members</string>
    <string name="temporarily_anonymous">Anonymous</string>
    <string name="temporarily_join">Join</string>
    <string name="temporarily_about">About</string>
    <string name="temporarily_standard">Standard</string>
    <string name="temporarily_private">Private</string>
    <string name="temporarily_broadcast">Broadcast</string>
    <string name="temporarily_conversation">Conversation</string>
    <string name="temporarily_create_channel_display">Create %s channel</string>
    <string name="temporarily_create_channel_subtitle">You can either specify your own channelId, or leave it to Eko to generate one for you.</string>
    <string name="temporarily_channel_id">Channel ID</string>
    <string name="temporarily_about_channel_display">About Channel</string>
    <string name="temporarily_about_channel_type">%s Channel</string>
    <string name="temporarily_about_channel_id">Channel ID: %s</string>
    <string name="temporarily_about_channel_name">Name: %s</string>
    <string name="temporarily_about_channel_member">%s Members</string>
    <string name="temporarily_about_channel_count_messages">%s Messages</string>
    <string name="temporarily_about_channel_tags">Tags : </string>
    <string name="temporarily_settings">Settings</string>
    <string name="temporarily_general">General</string>
    <string name="temporarily_channel">Channel</string>
    <string name="temporarily_channel_type_display">Channel type</string>
    <string name="temporarily_membership_display">Membership</string>
    <string name="temporarily_all">All</string>
    <string name="temporarily_member">Member</string>
    <string name="temporarily_not_member">Not Member</string>
    <string name="temporarily_include_tags_display">Include tags</string>
    <string name="temporarily_include_tags_hint">Hotels, Flights, Deals</string>
    <string name="temporarily_exclude_tags_display">Exclude tags</string>
    <string name="temporarily_exclude_tags_hint">Meals, Travel Protection</string>
    <string-array name="Membership">
        <item>All</item>
        <item>Member</item>
        <item>Guest</item>
    </string-array>
    <string name="temporarily_send_message_hint">Aa</string>
    <string name="temporarily_replying_to">Replying to %s</string>
    <string name="temporarily_replied_to">Replied to %s</string>
    <string name="temporarily_view_reply">View Reply</string>
    <string name="temporarily_yourself">yourself</string>
    <string name="temporarily_photo">Photo</string>
    <string name="temporarily_attachment">Attachment</string>
    <string name="temporarily_camera">Camera</string>
    <string name="temporarily_gallery">Gallery</string>
    <string name="temporarily_menu_members">Members</string>
    <string name="temporarily_menu_with_tags">With Tag(s)</string>
    <string name="temporarily_menu_without_tags">Without Tag(s)</string>
    <string name="temporarily_menu_set_tags">Set Tag(s)</string>
    <string name="temporarily_menu_notification">Notification</string>
    <string name="temporarily_menu_leave">Leave</string>
    <string name="temporarily_emoji_love">love</string>
    <string name="temporarily_emoji_sad">sad</string>
    <string name="temporarily_emoji_sleep">sleep</string>
    <string name="temporarily_emoji_smile">smile</string>
    <string name="temporarily_reactions">Reactions</string>
    <string name="temporarily_report_message">Report Message</string>
    <string name="temporarily_cancel_report_message">Cancel report message</string>
    <string name="temporarily_report_sender">Report Sender</string>
    <string name="temporarily_cancel_report_sender">Cancel report sender</string>
    <string name="temporarily_flag_message_success">You have reported message successfully</string>
    <string name="temporarily_unflag_message_success">Your report message was canceled successfully</string>
    <string name="temporarily_flag_sender_success">You have reported sender successfully</string>
    <string name="temporarily_unflag_sender_success">Your report sender was canceled successfully</string>
    <string name="temporarily_error">Error</string>
    <string name="temporarily_allow_notification">Allow Notification</string>
    <string name="temporarily_do_not_allow_notification">Don\'t allow Notification</string>
    <string name="temporarily_full_name">Anonymous</string>
    <string name="temporarily_total_members">%s members</string>
    <string name="temporarily_developer_mode">Developer Mode</string>
    <string name="temporarily_custom_message_key">Key</string>
    <string name="temporarily_custom_message_value">Value</string>
</resources>
