<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/default_bottom_sheet"
    android:backgroundTint="@color/material_grey_900"
    android:orientation="vertical"
    android:padding="@dimen/material_component_dialogs_padding_around_content_area"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/material_component_bottom_sheet_list_item_height"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:ignore="PrivateResource">

    <TextView
        android:id="@+id/text_custom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/material_component_text_fields_floating_label_padding_below_text_divider"
        android:text="@string/temporarily_developer_mode"
        android:textColor="@color/material_light_white"
        android:textSize="@dimen/material_typography_subheading"
        android:textStyle="bold" />

    <com.ekoapp.sample.chatfeature.components.ReplyingToComponent
        android:id="@+id/replying_to"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_layout_app_bar_height"
        android:padding="@dimen/material_component_text_fields_floating_label_padding_below_text_divider" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_key"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_component_text_fields_icon_height"
        android:layout_marginTop="@dimen/material_component_cards_primary_title_top_padding"
        android:background="@drawable/text_field_transparent"
        android:gravity="center_vertical"
        android:hint="@string/temporarily_custom_message_key"
        android:inputType="text"
        android:paddingStart="@dimen/material_layout_vertical_spacing_right_side_icons_margin"
        android:paddingEnd="@dimen/material_layout_vertical_spacing_right_side_icons_margin"
        android:textColor="@color/material_light_white"
        android:textColorHint="@color/material_light_white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_value"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_component_text_fields_icon_height"
        android:layout_marginTop="@dimen/material_component_text_full_width_single_line_text_field_text_top_and_bottom_padding"
        android:background="@drawable/text_field_transparent"
        android:gravity="center_vertical"
        android:hint="@string/temporarily_custom_message_value"
        android:inputType="text"
        android:paddingStart="@dimen/material_layout_vertical_spacing_right_side_icons_margin"
        android:paddingEnd="@dimen/material_layout_vertical_spacing_right_side_icons_margin"
        android:textColor="@color/material_light_white"
        android:textColorHint="@color/material_light_white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_component_button_dense_height"
        android:background="@drawable/default_button"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/material_component_button_text_left_and_right_padding"
        android:paddingEnd="@dimen/material_component_button_text_left_and_right_padding"
        android:text="@string/general_send"
        android:textColor="@color/material_light_white"
        android:textSize="@dimen/material_typography_button" />

</LinearLayout>